src/styles/components/shared/_list-advanced.scss
/* ... */
.list-advanced-component-empty-list {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	display: flex;
	align-items: center;
	flex-direction: column;

	.empty-list-content {
		width: 100%;
		height: 100%;
		background: #ffffff;
		box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.16);
		padding: 85px 0;
		display: flex;
		justify-content: center;
		align-items: center;
		flex-direction: column;

		.text-placeholder {
			font-size: 188px;
		}

		.text-h2 {
			padding: 0 0 10px;
		}

		.button-component-wrapper {
			margin: 30px 10px 0;
			display: inline-block;
		}
	}
}

.list-advanced-export-dropdown-content {
	.icon {
		color: $color-primary;
	}
}

//New design changes

//head inner shadow
.ag-theme-alpine {
	.ag-root-wrapper {
		box-shadow: none !important;
	}

	.ag-action-popup-cell {
		.icon {
			opacity: 1 !important;
			color: $color-primary !important;
			transform: rotate(90deg) !important;
			font-size: 18px !important;
		}
	}
}

.list-advanced-head {
	border: 1px solid #c6c6c6 !important;
	border-bottom-color: #e3e3e3 !important;
	border-radius: 4px 4px 0 0 !important;
	padding: 0 14px !important;
	justify-content: center !important;
}

.list-advanced-search-component {
	width: 185px !important;
	.icon-search {
		color: $color-text-lighter !important;
		font-size: 14px !important;
	}
	.input-search input {
		width: 100% !important;
		color: var(--ag-foreground-color, #181d1f) !important;
		font-size: 14px !important;
		background-color: #fff !important;
		border-radius: 4px !important;
	}
}

.head-first-bar {
	padding-left: 0 !important;
}

.list-advanced-component {
	.list-advanced-head {
		.left-col {
			.popover-wrapper {
				display: block !important;
			}
			.filter-search-container {
				width: fit-content !important;
				display: flex !important;
				align-items: center !important;
				margin-left: 20px !important;
				span {
					color: #888787 !important;
					font-size: 14px !important;
					font-weight: 500 !important;
				}
				.search-filter-label {
					margin-right: 5px !important;
				}
				.selectInput {
					width: 185px !important;
				}
				.Select-control {
					border: 1px solid #cccccc !important;
					border-radius: 4px !important;
				}
				.Select-value-label {
					color: var(--ag-foreground-color, #181d1f) !important;
				}
			}
		}

		.head-first-bar {
			.right-col > div {
				padding: 0 10px !important;
				margin: 0 !important;
			}
			.right-col > :nth-child(n + 2) {
				margin: 0px !important;
				border-left: 1px solid #c6c6c6;
			}
			.right-col {
				border: 1px solid #c6c6c6 !important;
				border-radius: 4px !important;
				padding: 0 !important;
				.icon {
					color: var(--ag-foreground-color, #181d1f) !important;
					line-height: unset !important;
				}
				.popover-wrapper {
					border-left: none !important;
					padding: 10px 0 !important;
					.popover-entry {
						padding: 10px !important;
						margin: 0 !important;
					}
				}
			}
		}
	}
	.ag-center-cols-viewport {
		width: calc(100% - 2px);
	}
}

//List heading
.ag-header {
	border-bottom: 1px solid #e3e3e3 !important;
	background-color: #f1f8fb !important;
}

.ag-header-cell {
	color: #888787 !important;
	font-weight: 600 !important;
	text-transform: uppercase !important;
	font-size: 13px !important;
}

//List container
.ag-grid-container {
	.ag-root {
		// box-shadow: none !important;
		// border: 1px solid #c6c6c6 !important;
		// border-radius: 0 0 4px 4px !important;
		// border-top: none !important;
		box-shadow: none;
		border: 1px solid #c6c6c6;
		border-radius: 0 0 4px 4px;
		border-top: none;
	}
}

.ag-row-hover {
	background-color: #ecfcf4 !important;
}

